<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/toolbar"
        android:id="@+id/main_activity_toolbar"/>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_below="@id/main_activity_toolbar"
        android:layout_height="0dp"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:layout_below="@id/map">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/cig_icon_map_w35px"
            android:text="@string/smoking_incident"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:drawableLeft="@drawable/map_circle"
            android:text="@string/smoking_hotspot"
            android:drawablePadding="8dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:drawableLeft="@drawable/blue_circle"
            android:text="@string/current_location"
            android:drawablePadding="8dp"
            />
    </LinearLayout>
</LinearLayout>



