<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grey_blue_background">
    <include layout="@layout/toolbar"
             android:id="@+id/num_cigs_toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_smoked_title"
        android:id="@+id/num_smoked_title"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="21.5dp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"
        android:layout_below="@+id/num_cigs_toolbar"/>
    <View
        android:id="@+id/divider_under_title"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@android:color/black"
        android:layout_below="@+id/num_smoked_title"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider_under_title"
        android:layout_above="@+id/legend_and_axis_label"
        android:id="@+id/chart_yaxis_container">
        <com.example.webert3.imagedisplayapp.Helpers.VerticalTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/num_people"
            android:id="@+id/y_axis_relative_relapses"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_below="@+id/divider_under_title"
            android:textColor="@color/BLACK"
            android:background="@color/LTGREY"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/cigs_smoked_barchart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider_under_title"
            android:layout_toRightOf="@id/y_axis_relative_relapses"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/legend_and_axis_label">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_smoked_x_axis_label"
            android:id="@+id/x_axis_relative_relapses"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/BLACK"
            android:background="@color/LTGREY"
            android:paddingBottom="0dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/x_axis_relative_relapses"
            android:orientation="horizontal"
            android:background="@color/LTGREY">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/blue_square_24"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/BLACK"
                    android:text="@string/num_i_smoked"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>