<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grey_blue_background">
    <include layout="@layout/toolbar"
             android:id="@+id/relative_relapses_toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_relapses_title"
        android:id="@+id/relative_relapses_title"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"
        android:layout_below="@+id/relative_relapses_toolbar"/>
    <View
        android:id="@+id/divider_under_title"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@android:color/black"
        android:layout_below="@+id/relative_relapses_title"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider_under_title"
        android:layout_above="@+id/legend_and_axis_label"
        android:id="@+id/chart_yaxis_container">
        <!--<com.example.webert3.imagedisplayapp.Helpers.VerticalTextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/time_of_day_yaxis"-->
            <!--android:id="@+id/y_axis_relative_relapses"-->
            <!--android:layout_gravity="center"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:textSize="16dp"-->
            <!--android:textStyle="bold"-->
            <!--android:textAlignment="center"-->
            <!--android:layout_below="@+id/divider_under_title"-->
            <!--android:textColor="@color/BLACK"-->
            <!--android:background="@color/LTGREY"/>-->

        <com.github.mikephil.charting.charts.ScatterChart
            android:id="@+id/relative_relapses_scatterchart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider_under_title"
            android:layout_toRightOf="@id/y_axis_relative_relapses"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/legend_and_axis_label">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relative_relapses_xaxis_label"
            android:id="@+id/x_axis_relative_relapses"
            android:textAlignment="center"
            android:paddingBottom="1dp"
            android:paddingTop="5dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/BLACK"
            android:background="@color/LTGREY"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/x_axis_relative_relapses"
                android:orientation="horizontal"
                android:background="@color/LTGREY">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:src="@drawable/yellow_sqaure_24"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/BLACK"
                        android:text="@string/low_stress"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_weight="1.5">
                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:src="@drawable/orange_square_24"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/BLACK"
                        android:text="@string/mod_stress"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:src="@drawable/red_square_24"
                        android:paddingBottom="0dp"
                        android:paddingLeft="0dp"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/BLACK"
                        android:text="@string/high_stress"/>
                </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/LTGREY"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/triangle_24"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/BLACK"
                    android:text="@string/my_lapses"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>