<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grey_blue_background">
    <include layout="@layout/toolbar"
             android:id="@+id/single_linechart_activity_toolbar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selected_date_analytics"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/single_linechart_activity_toolbar"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@android:color/black"
        android:layout_below="@+id/selected_date_analytics"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:layout_above="@+id/legend_and_axis_label"
        android:id="@+id/chart_yaxis_container">
        <com.example.webert3.imagedisplayapp.Helpers.VerticalTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/stress_level_yaxis_label"
            android:id="@+id/y_axis_stress_by_day"
            android:layout_gravity="center"
            android:paddingBottom="1dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/BLACK"
            android:background="@color/DEFAULT_WHITE"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/legend_and_axis_label"
        android:background="@color/DEFAULT_WHITE">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_xaxis_label"
            android:id="@+id/x_axis_time"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/BLACK"
            android:paddingBottom="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DEFAULT_WHITE"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/lapse_instance_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/BLACK"
                    android:text="@string/lapse_incident"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>